--- a/bot-battlr/package.json
+++ b/bot-battlr/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "json": "^11.0.0",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "server": "^1.0.39"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
